# lab2

./: .gitmodules  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  tests.cpp
tests_catch2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  tests.cpp
tests_catch2/util/: bisection.cpp  bisection.h
tests_googletest/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
tests_googletest/util/: bisection.cpp
